[package]
name = "drift-funding-arb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drift = { path = "./protocol-v2/programs/drift", features=["no-entrypoint"] }
anchor-client = { version = "0.25.0", features = ["debug"] }
solana-program = "1.4.4"
pyth-sdk-solana = "0.6.1"
thiserror = "1.0.34"
lazy_static = "1.4.0"
clap = { version = "3.1.12", features = ["derive", "env"] }